gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/issue21378.d
version https://git-lfs.github.com/spec/v1
oid sha256:abbb1337dfd36f0489c158482c0869505de86d58c51a529015a5c76d24a8fdec
size 497
